# Anarchy-Inference

./: Cargo.toml  README.md  TESTS.md  TODO.md  Trunk.toml  anarchy_advantages_analysis.md  benchmark_framework.py  benchmark_results.md  budget_categories_allocations.md  community_building_strategy.md  competitive_analysis.md  deploy_github_pages.sh  documentation.md  final_budget_justification.md  final_report.md  generate_sample_data.py  grant_application_review.md  index.html  multi_grant_funding_strategy.md  pasted_content.txt  run_benchmarks.py  run_benchmarks_optimized.py  string_manipulation_anarchy_inference.ai  string_manipulation_python.py  styles.css  test.a.i  test_language.py  test_recent_additions.a.i  test_simple.a.i  todo_list.md  updated_todo_list.md  web_scraper_demo.ai
.cargo/: config.toml
anarchy_test_suite/: error_handling_anarchy_simple.a.i  modules_anarchy.a.i  test_report.txt
backend/: Cargo.toml  build.rs  tauri.conf.json
backend/icons/: icon.icns
benchmark_results/: benchmark_data_optimized.json  benchmark_report.md  token_efficiency_analysis.md
case_studies/: application_domains_research.md  case_study_scenarios.md
code_samples/: api_interaction_anarchy_inference_optimized.ai  api_interaction_python.py  data_processing_anarchy_inference_optimized.ai  data_processing_rust.rs  file_operations_anarchy_inference_optimized.ai  string_manipulation_anarchy_inference_optimized.ai  web_scraping_anarchy_inference_optimized.ai
community_forum/: github_discussions_setup_guide.md
demo_apps/: api_client_demo.ai  api_interaction_anarchy_inference.ai  api_interaction_javascript.js  api_interaction_rust.rs  data_analyzer_demo.ai  data_processing_anarchy_inference.ai  data_processing_javascript.js  data_processing_python.py  file_operations_anarchy_inference.ai  file_operations_javascript.js  file_operations_python.py  file_operations_rust.rs  file_system_demo.ai  string_manipulation_javascript.js  string_manipulation_rust.rs  ui_demo.ai  web_scraping_anarchy_inference.ai  web_scraping_javascript.js  web_scraping_python.py  web_scraping_rust.rs
docs/: ENHANCEMENTS.md  UNDOCUMENTED_FEATURES.md  debug_agent.md  (+32 more)
frontend/: Cargo.toml  Trunk.toml  index.html  test_script.js
frontend/src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+301 files in other folders)
