[workspace]
members = [
    "backend",
    "frontend"
]
resolver = "2"

[package]
name = "anarchy-inference"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.32", features = ["full", "macros", "rt-multi-thread"] }
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-lsp = "0.20"
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
futures = "0.3"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
parking_lot = "0.12"
once_cell = "1.21.3"
