[package]
name = "anarchy-inference-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [
    "devtools"
] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[features]
default = []
