[package]
name = "anarchy-inference-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "anarchy-inference-frontend"
path = "src/main.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "Window",
    "Document",
    "HtmlElement",
    "console"
] }
js-sys = "0.3"
wasm-logger = "0.2"
log = "0.4"
console_error_panic_hook = "0.1"
