[package]
name = "anarchy-inference-tauri"
version = "0.1.0"
description = "Anarchy Inference Tauri Application"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all"] }
anarchy_inference = { path = ".." }
tokio = { version = "1.32", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"] 
